// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot: primary with icon on left 1`] = `
<button
  className="twigs-c-kZaMBa twigs-c-kZaMBa-kyEbhl-size-sm twigs-c-kZaMBa-jgyhUs-variant-primary"
  data-testid="button"
>
  <span
    className="twigs-c-UazGY twigs-c-UazGY-ijxSBfJ-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
  Primary Button
</button>
`;

exports[`Button matches snapshot: secondary with icon on right 1`] = `
<button
  className="twigs-c-kZaMBa twigs-c-kZaMBa-kyEbhl-size-sm twigs-c-kZaMBa-fyuIIR-variant-secondary"
  data-testid="button"
>
  Secondary Button
  <span
    className="twigs-c-UazGY twigs-c-UazGY-ieSlpoK-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
</button>
`;

exports[`Button matches snapshot: text - disabled and loading 1`] = `
<button
  className="twigs-c-kZaMBa twigs-c-kZaMBa-kyEbhl-size-sm twigs-c-kZaMBa-jgyhUs-variant-primary twigs-c-kZaMBa-hlDObG-isText-true twigs-c-kZaMBa-feQjQZ-cv"
  data-testid="button"
  disabled={true}
>
  <div
    className="twigs-c-PJLV twigs-c-dMQBBi"
    data-testid="dot-loader"
  >
    <div
      className="twigs-c-PJLV"
      data-testid="box"
    />
    <div
      className="twigs-c-PJLV"
      data-testid="box"
    />
    <div
      className="twigs-c-PJLV"
      data-testid="box"
    />
  </div>
</button>
`;

exports[`Button matches snapshot: text and custom styles 1`] = `
<button
  className="twigs-c-kZaMBa twigs-c-kZaMBa-kyEbhl-size-sm twigs-c-kZaMBa-jgyhUs-variant-primary twigs-c-kZaMBa-hlDObG-isText-true twigs-c-kZaMBa-feQjQZ-cv twigs-c-kZaMBa-ihBcVkj-css"
  data-testid="button"
>
  Link text
</button>
`;

exports[`Button matches snapshot: text with icon on both sides 1`] = `
<button
  className="twigs-c-kZaMBa twigs-c-kZaMBa-kyEbhl-size-sm twigs-c-kZaMBa-jgyhUs-variant-primary twigs-c-kZaMBa-hlDObG-isText-true twigs-c-kZaMBa-feQjQZ-cv"
  data-testid="button"
>
  <span
    className="twigs-c-UazGY twigs-c-UazGY-ijxSBfJ-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
  Text Button
  <span
    className="twigs-c-UazGY twigs-c-UazGY-ieSlpoK-css"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 6 10"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 9L5 5L1 1"
        stroke="white"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="1.5"
      />
    </svg>
  </span>
</button>
`;
